planner app initial part

--- a/spent/templates/spent/daily_spent.html
+++ b/spent/templates/spent/daily_spent.html
@@ -16,7 +16,7 @@
         <span class="text-center">You have exceeded your Weekly limit: {{weekly_limit}}!!! Amount spent: {{weektotals}} ({{weekly_deficit}})</span>
     </div>
     {% endif %}
-    <p class="text-center text-secondary"> <u href="#" data-toggle="modal" data-target="#urgentModal"> You have <span class='text-danger'>{{num}} </span> Urgent Shopping items</u></p>
+    <p class="text-center text-secondary"> <a href="#" data-toggle="modal" data-target="#urgentModal"> You have <span class='text-danger'>{{num}} </span> Urgent Shopping items</a></p>
 </div>
 
 
