--- a/templates/base.html
+++ b/templates/base.html
@@ -125,6 +125,7 @@
 
 
 <body class="container-fluid">
+<p class="alert alert-success text-center ">2024 Theme: Discipline, Courage And Hardwork (inspired by Jishinde Ushinde)</p>
 {%block content %}
 
 {%endblock content %}
