Weekly Savings Featured Add

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
         <div class="dropdown-menu" aria-labelledby="spentDropDown">
             <a class="dropdown-item" href="{% url 'add_spent'%}">Add Spent</a>
             <a class="dropdown-item" href="{% url 'daily_list'%}">Daily List</a>
+            <a class="dropdown-item" href="{% url 'weekly_savings'%}">Weekly Savings</a>
             <a class="dropdown-item" href="{% url 'monthly_list'%}">Monthly List</a>
             <a class="dropdown-item" href="{% url 'period_graph'%}">Spent Graph</a>
             <a class="dropdown-item" href="{% url 'weekly_analysis'%}">Weekly Analysis</a>
@@ -50,6 +51,7 @@
             <a class="dropdown-item" href="{% url 'savings_list'%}">Savings List</a>
             <a class="dropdown-item" href="{%url 'create_track'%}">Create a new Track</a>
             <a class="dropdown-item" href="{%url 'create_tracking'%}">Generate Trackers</a>
+            <a class="dropdown-item" href="{%url 'create_savings_tracking'%}">Generate Savings Trackers</a>
             <a class="dropdown-item" href="{%url 'track_list'%}">TrackList</a>
             <a class="dropdown-item" href="{%url 'tracking_list'%}">BudgetSpentList</a>
         </div>
