--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,9 @@
 
 
 <body class="container-fluid">
-<p class="alert alert-success text-center ">2024 Theme: Discipline, Courage And Hardwork (inspired by Jishinde Ushinde)</p>
+
+<p class="alert alert-success text-center ">2025 Theme: Give without a sense of reward (People Like You - Gramps Morgan)</p>
+
 {%block content %}
 
 {%endblock content %}
